fixed header going behind images

--- a/_sass/intro.scss
+++ b/_sass/intro.scss
@@ -1,5 +1,5 @@
 #sectionIntro {
-    height: 80vh;
+    height: 83vh;
     display: flex;
     align-items: center;
     flex-direction: column;
